# discordbot-rs

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
src/: main.rs
