[package]
name = "discordbot"
version = "0.1.0"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
edition = "2018"

[features]
use-dotenv = ["dotenv"]

[dependencies]
backslash-z = "0.2.0"
lazy_static = "1.3.0"
futures = "0.1.25"
tokio = "0.1.18"
openssl-probe = "0.1.2"
airkorea = "0.4.0"
daumdic = "0.6.1"


[dependencies.serenity]
version = "0.5.13"
default-features = false
features = [ "model", "cache", "client" ]

[dependencies.dotenv]
version = "0.13.0"
optional = true

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }
